@@ -1182,9 +1182,10 @@ gld${EMULATION_NAME}_place_orphan (lang_input_statement_type *file, asection *s)
 #define HAVE_SECTION(hold, name) \
 (hold.os != NULL || (hold.os = lang_output_section_find (name)) != NULL)
 
-  if (((s->flags & (SEC_EXCLUDE | SEC_GROUP)) != 0 && !link_info.relocatable)
-      || ((s->flags & (SEC_EXCLUDE | SEC_DEBUGGING))
-	  == (SEC_EXCLUDE | SEC_DEBUGGING)))
+  if (link_info.relocatable && (s->flags & SEC_DEBUGGING) == 0)
+    s->flags &= ~SEC_EXCLUDE;
+
+  if ((s->flags & SEC_EXCLUDE) != 0)
     {
       if (s->output_section == NULL)
 	s->output_section = bfd_abs_section_ptr;
